update stacked bar dashboard and other minor changes.

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.properties.xml
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsPage.properties.xml
@@ -20,4 +20,5 @@
 	<entry key="dashboards.columnChart">Column Chart Report</entry>
     <entry key="dashboards.typeOfFlow">Flow Chart Report</entry>
     <entry key="dashboards.stackedBarChart">Stacked Bar Report</entry>
+	<entry key="dashboards.typeOfSectorsByFlow">Type of Flows by Sector</entry>
 </properties>
